feat: serviços de negócio da aplicação